davy-deployment/monitoring/core/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
    component: core
spec:
  type: ClusterIP
  ports:
  - name: grafana
    protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: grafana
    component: core
