davy-deployment/monitoring/core/monitoring-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: monitoring.davyjones.me
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
  tls:
  - hosts:
    - monitoring.davyjones.me
    secretName: monitoring-crt-secret
