davy-deployment/monitoring/core/prometheus-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: prom-basic-auth
spec:
  rules:
  - host: prometheus.davyjones.me
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
  tls:
  - hosts:
    - prometheus.davyjones.me
    secretName: monitoring-crt-secret
